RESOLVED FIXED 6424
<text>, <tspan> dominant-baseline attribute is not respected
https://bugs.webkit.org/show_bug.cgi?id=6424
Summary <text>, <tspan> dominant-baseline attribute is not respected
Eric Seidel (no email)
Reported 2006-01-08 01:49:01 PST
<text>, <tspan> dominant-baseline attribute is not respected http://www.w3.org/TR/SVG/text.html#DominantBaselineProperty
Attachments
Layout test results (131.83 KB, patch)
2007-11-11 04:40 PST, Nikolas Zimmermann
eric: review+
Initial patch (5.53 KB, patch)
2007-11-11 04:41 PST, Nikolas Zimmermann
eric: review+
Eric Seidel (no email)
Comment 1 2006-01-27 09:20:27 PST
*** Bug 6873 has been marked as a duplicate of this bug. ***
Eric Seidel (no email)
Comment 2 2006-01-27 09:20:46 PST
Eric Seidel (no email)
Comment 3 2007-10-12 01:35:00 PDT
I'm almost surprised WildFox hasn't fixed this one yet in all the rest of his Text work.
Nikolas Zimmermann
Comment 4 2007-10-12 03:04:21 PDT
*** Bug 14005 has been marked as a duplicate of this bug. ***
Nikolas Zimmermann
Comment 5 2007-10-12 05:29:26 PDT
I postponed the baseline stuff, until the engine handles all kind of per-chunk/per-char transformations well. The last things missing before I'll start with this is: a) textLength/lengthAdjust support for textPath b) proper incorporation of letter/word spacing in our "buildLayoutInformation" code (to be able to support spacing for textPath, which is all drawn seperated..) That's it - from the top of my head. Greetings, Niko
Nikolas Zimmermann
Comment 6 2007-11-11 04:40:52 PST
Created attachment 17182 [details] Layout test results
Nikolas Zimmermann
Comment 7 2007-11-11 04:41:39 PST
Created attachment 17183 [details] Initial patch This does not fix Hixies glyphment align bug - gonna reopen it - it has a different origin.
Eric Seidel (no email)
Comment 8 2007-11-11 11:51:22 PST
Comment on attachment 17183 [details] Initial patch Hum. We should chat about this over IRC. This seems like it could add a lot of recursive tree walks in these (rare) cases that dominant baseline (like "nochange") is used.
Eric Seidel (no email)
Comment 9 2007-11-11 14:26:47 PST
Comment on attachment 17183 [details] Initial patch This is fine. As we discussed it could be done as part of RenderStyle instead, and just cached there. I don't expect this will ever become a perf issue however.
Eric Seidel (no email)
Comment 10 2007-11-11 14:26:58 PST
Comment on attachment 17182 [details] Layout test results fine.
Nikolas Zimmermann
Comment 11 2007-11-11 14:38:01 PST
Landed in r27692.
Note You need to log in before you can comment on or make changes to this bug.