Reviewed by Eric.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=6424 (<text>, <tspan> dominant-baseline attribute is not respected)

Add (basic) support for dominant-baseline / alignment-baseline text properties.
Note: there are no official testcases, and no-one implemented it before. Only ASV3
      supported dominant-baseline, but not correct it seems.


Canonical link: https://commits.webkit.org/21613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27692 268f45cc-cd09-0410-ab3c-d52691b4dbfc